--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,9 @@ body {
     top: 0;
     width: 100vw;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
     font-weight: 700;
     font-size: 10vmin;
     margin: 5vh auto;
@@ -188,6 +190,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
 }
 
 #websites {
